<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/cardview_dark_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/barra_color"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/appbar"
        android:background="@color/colorAccent"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/barra_color"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_titulo_nombre_tarea"/>

        <EditText
            android:id="@+id/et_tarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_titulo_descripcion_tarea"/>
        <EditText
            android:id="@+id/et_descripcion"
            android:lines="5"
            android:layout_width="match_parent"
            android:maxLength="50"
            android:layout_height="100dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_titulo_tipo_tarea"
                android:layout_weight="2"/>

            <Spinner
                android:id="@+id/sp_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/tipos_tareas"></Spinner>

        </LinearLayout>

       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
           android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_titulo_duracion_tarea"
            android:layout_weight="2"/>

        <Spinner
            android:id="@+id/sp_duracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:entries="@array/duracion_tareas"></Spinner>


    </LinearLayout>
        <Button
            android:id="@+id/btn_aceptar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/str__aceptar"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"/>
    </LinearLayout>






</RelativeLayout>