<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activitis.MainActivity"
  >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            >

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="center_vertical"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:lines="2"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_nombre" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/str_granja_articulo"
                    android:textColor="@color/cardview_dark_background"
                    android:gravity="center_vertical"
                    android:id="@+id/tv_articulo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text=""
                    android:gravity="center_vertical"
                    android:id="@+id/txt_articulo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/str_codigo_postal"
                    android:textColor="@color/cardview_dark_background"
                    android:gravity="center_vertical"
                    android:id="@+id/tv_codigo_postal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text=""
                    android:gravity="center_vertical"
                    android:id="@+id/txt_codigo_postal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/str_granja_id"
                    android:textColor="@color/cardview_dark_background"
                    android:gravity="center_vertical"
                    android:id="@+id/tv_granja_id" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text=""
                    android:gravity="center_vertical"
                    android:id="@+id/txt_granja_id" />

            </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>